<resources>
    <string name="app_name">media-app</string>

    <string name="api_key">5614ba0e58894bf287985ae0672af8ee</string>

    <!--  Bottom navigation:  -->
    <string name="bottom_nav_news">News</string>
    <string name="bottom_nav_search">Search</string>
    <string name="bottom_nav_favorites">Favorites</string>

    <!--  Headers:  -->
    <string name="header_news">News</string>
    <string name="header_search">Search</string>
    <string name="header_favorites">Favorites</string>
    <string name="header_login">Login</string>
    <string name="header_home">Home</string>
    <string name="header_create_account">CreateAccount</string>
    <string name="header_item_details">Item Details Fragment</string>

    <string name="message_empty_data_swipe_refresh">There no data.\nSwipe to refresh.</string>
    <string name="message_empty_data">There no data.</string>
    <string name="visit_website">Visit Website</string>

    <!--  Arguments  -->
    <string name="arg_user_id">arg_user_id</string>
</resources>
