<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splash_fragment">

    <!--  SplashFragment  -->
    <fragment
        android:id="@+id/splash_fragment"
        android:name="com.example.media_app.presentation.splash.SplashFragment"
        android:label="Splash"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splash_to_login"
            app:destination="@+id/login_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_splash_to_home"
            app:destination="@+id/home_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_splash_to_news"
            app:destination="@+id/news_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <!--  LoginFragment  -->
    <fragment
        android:id="@+id/login_fragment"
        android:name="com.example.media_app.presentation.login.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_news"
            app:destination="@id/news_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_login_to_create_account"
            app:destination="@id/create_account_fragment" />
    </fragment>

    <!--  CreateAccountFragment  -->
    <fragment
        android:id="@+id/create_account_fragment"
        android:name="com.example.media_app.presentation.create_account.CreateAccountFragment"
        android:label="@string/header_create_account"
        tools:layout="@layout/fragment_create_account">

        <action
            android:id="@+id/action_create_account_to_news"
            app:destination="@+id/news_fragment" />
    </fragment>

    <!--  HomeFragment  -->
    <fragment
        android:id="@+id/home_fragment"
        android:name="com.example.media_app.presentation.home.HomeFragment"
        android:label="Home"
        tools:layout="@layout/fragment_home" />

    <!--  NewsFragment  -->
    <fragment
        android:id="@+id/news_fragment"
        android:name="com.example.media_app.presentation.news.NewsFragment"
        android:label="@string/header_news"
        tools:layout="@layout/fragment_news">
        <!--        <action-->
        <!--            android:id="@+id/action_news_to_search"-->
        <!--            app:destination="@id/search_fragment" />-->
        <action
            android:id="@+id/action_news_to_item_details"
            app:destination="@id/item_details_fragment" />
    </fragment>

    <!--  SearchFragment  -->
    <fragment
        android:id="@+id/search_fragment"
        android:name="com.example.media_app.presentation.search.SearchFragment"
        android:label="@string/header_search"
        tools:layout="@layout/fragment_search">
        <!--        <action-->
        <!--            android:id="@+id/action_search_to_news"-->
        <!--            app:destination="@id/news_fragment" />-->
        <action
            android:id="@+id/action_search_to_item_details"
            app:destination="@id/item_details_fragment" />
    </fragment>

    <!--  FavoriteFragment  -->
    <fragment
        android:id="@+id/favorite_fragment"
        android:name="com.example.media_app.presentation.favorite.FavoriteFragment"
        android:label="Favorites"
        tools:layout="@layout/fragment_favorite" />

    <!--  ItemDetailFragment  -->
    <fragment
        android:id="@+id/item_details_fragment"
        android:name="com.example.media_app.presentation.general_details.ItemDetailFragment"
        android:label="@string/header_item_details"
        tools:layout="@layout/fragment_item_details">

<!--        <action-->
<!--            android:id="@+id/action_item_details_to_news"-->
<!--            app:destination="@id/news_fragment" />-->

<!--        <action-->
<!--            android:id="@+id/action_item_details_to_search"-->
<!--            app:destination="@id/search_fragment" />-->
    </fragment>
</navigation>